@@ -1,5 +1,12 @@
 2009-03-25  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	- Updated to the latest trunk version regarding minor formating
+	  in the math memory.
+
+	* src/boards/memory.c: (get_random_token), (create_item):
+
+2009-03-25  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	* src/boards/memory.c: (start_board), (memory_next_level): fixed a cased in which
 	  the memory sound was in a fuzzy state if the level was changed by the user.
 	  Merged from trunk 3795
